fix add pom.xml